Creating shared templates for submit, detail, and list pages

--- a/templates/ensembl/datacheck/groups.html
+++ b/templates/ensembl/datacheck/groups.html
@@ -1,5 +1,5 @@
 
-{% extends "ensembl/datacheck/base_catalog.html" %}
+{% extends "ensembl/datacheck/catalog.html" %}
 
 {% block datacheck_table %}
 
@@ -43,4 +43,4 @@
     </tbody>
   </table>
 
-{% endblock %}
+{% endblock datacheck_table %}
