--- a/templates/ensembl/datacheck/list.html
+++ b/templates/ensembl/datacheck/list.html
@@ -1,6 +1,4 @@
 
-{% extends "ensembl/datacheck/base_submission.html" %}
+{% extends 'ensembl/detail.html' %}
 
-{% block datacheck_submission %}
-
-{% endblock %}
+{% set title = 'Datacheck Job List' %}
