--- a/templates/ensembl/datacheck/catalog.html
+++ b/templates/ensembl/datacheck/catalog.html
@@ -1,25 +1,10 @@
 
 {% extends 'ensembl/base.html' %}
 
-{% block title %}
-  Datacheck Catalog
-{% endblock %}
-
-{% block styles %}
-  {{ super() }}
-  <link rel="stylesheet" href="{{ url_for('static', filename='ensembl.css') }}">
-  <link rel="shortcut icon" href="{{ url_for('static', filename='img/production.png') }}">
-{% endblock styles %}
-
+{% set title = 'Datacheck Catalog' %}
 {% set repo_url = 'https://github.com/Ensembl/ensembl-datacheck/tree/master/lib/Bio/EnsEMBL/DataCheck/Checks/' %}
 
-{% block content %}
-
-  <a id="top"></a>
-
-  <div class="container">
-    <h2><img src="{{ url_for('static', filename='img/production.png') }}" /> Datacheck Catalog</h2>
-  </div>
+{% block content -%}
 
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light border">
@@ -47,8 +32,8 @@
     </nav>
   </div>
 
-
   <div class="container">
     {% block datacheck_table %}{% endblock %}
   </div>
-{% endblock %}
+
+{%- endblock content %}
