--- a/templates/ensembl/datacheck/types.html
+++ b/templates/ensembl/datacheck/types.html
@@ -1,5 +1,5 @@
 
-{% extends "ensembl/datacheck/base_catalog.html" %}
+{% extends "ensembl/datacheck/catalog.html" %}
 
 {% block datacheck_table %}
 
@@ -36,4 +36,4 @@
     </tbody>
   </table>
 
-{% endblock %}
+{% endblock datacheck_table %}
