--- a/templates/ensembl/gifts/detail.html
+++ b/templates/ensembl/gifts/detail.html
@@ -2,5 +2,5 @@
 {% extends 'ensembl/detail.html' %}
 
 {% set title = 'GIFTs Job Detail' %}
-{% set shortcut_icon = 'img/gifts.png' %}
+{% set icon_image = 'img/gifts.png' %}
 
