--- a/templates/ensembl/gifts/submit.html
+++ b/templates/ensembl/gifts/submit.html
@@ -2,7 +2,7 @@
 {% extends 'ensembl/submit.html' %}
 
 {% set title = 'GIFTs Submission' %}
-{% set shortcut_icon = 'img/gifts.png' %}
+{% set icon_image = 'img/gifts.png' %}
 
 {% block submit -%}
 
