--- a/templates/ensembl/gifts/list.html
+++ b/templates/ensembl/gifts/list.html
@@ -1,6 +1,6 @@
 
-{% extends 'ensembl/detail.html' %}
+{% extends 'ensembl/list.html' %}
 
 {% set title = 'GIFTs Job List' %}
-{% set shortcut_icon = 'img/gifts.png' %}
+{% set icon_image = 'img/gifts.png' %}
 
