--- a/templates/ensembl/gifts/submit.html
+++ b/templates/ensembl/gifts/submit.html
@@ -13,8 +13,13 @@
         <legend class="w-auto fg-green">&nbsp;What would you like to do today?&nbsp;</legend>
 
         <div class="form-group row">
-          {{ form.release.label( class='col-sm-2 col-form-label' ) }}
-          <div class="col-sm-1">{{ form.release( class='form-control' ) }}</div>
+          {{ form.ensembl_release.label( class='col-sm-2 col-form-label' ) }}
+          <div class="col-sm-1">{{ form.ensembl_release( class='form-control' ) }}</div>
+        </div>
+
+        <div class="form-group row">
+          {{ form.environment.label( class='col-sm-2 col-form-label' ) }}
+          <div class="col-sm-2">{{ form.environment( class='form-control' ) }}</div>
         </div>
 
         <div class="form-group row">
