--- a/templates/ensembl/gifts/submit.html
+++ b/templates/ensembl/gifts/submit.html
@@ -10,36 +10,44 @@
       {{ form.csrf }}
 
       <fieldset class="border rounded p-2 border-green">
-        <legend class="w-auto fg-green">&nbsp;What would you like to do today?&nbsp;</legend>
+        <div class="row justify-content-center">
+          <div class="col-sm-12">
 
-        <div class="form-group row">
-          {{ form.ensembl_release.label( class='col-sm-2 col-form-label' ) }}
-          <div class="col-sm-1">{{ form.ensembl_release( class='form-control' ) }}</div>
-        </div>
+            <div class="form-group row">
+              {{ form.ensembl_release.label( class='col-sm-3 col-form-label' ) }}
+              <div class="col-sm-2">{{ form.ensembl_release( class='form-control' ) }}</div>
+            </div>
 
-        <div class="form-group row">
-          {{ form.environment.label( class='col-sm-2 col-form-label' ) }}
-          <div class="col-sm-2">{{ form.environment( class='form-control' ) }}</div>
-        </div>
+            <div class="form-group row">
+              {{ form.environment.label( class='col-sm-3 col-form-label' ) }}
+              <div class="col-sm-2">{{ form.environment( class='form-control' ) }}</div>
+            </div>
 
-        <div class="form-group row">
-          {{ form.email.label( class='col-sm-2 col-form-label' ) }}
-          <div class="col-sm-3">{{ form.email( class='form-control' ) }}</div>
-        </div>
+            <div class="form-group row">
+              {{ form.email.label( class='col-sm-3 col-form-label' ) }}
+              <div class="col-sm-4">{{ form.email( class='form-control' ) }}</div>
+            </div>
 
-        <div class="form-group row">
-          {{ form.tag.label( class='col-sm-2 col-form-label' ) }}
-          <div class="col-sm-3">{{ form.tag( class='form-control' ) }}</div>
-        </div>
+            <div class="form-group row">
+              {{ form.tag.label( class='col-sm-3 col-form-label' ) }}
+              <div class="col-sm-4">{{ form.tag( class='form-control' ) }}</div>
+            </div>
 
-        <div class="form-group row">
-          <div class="col-sm-6">
-            {{ form.update_ensembl( class='btn bg-green' ) }}
-            {{ form.process_mapping( class='btn bg-green' ) }}
-            {{ form.publish_mapping( class='btn bg-green' ) }}
+            <div class="form-group row">
+              {{ form.auth_token.label( class='col-sm-3 col-form-label' ) }}
+              <div class="col-sm-4">{{ form.auth_token( class='form-control' ) }}</div>
+            </div>
+
+            <div class="form-group row justify-content-center">
+              <div class="col-sm-10">
+                {{ form.update_ensembl( class='btn bg-green' ) }}
+                {{ form.process_mapping( class='btn bg-green' ) }}
+                {{ form.publish_mapping( class='btn bg-green' ) }}
+              </div>
+            </div>
+
           </div>
         </div>
-
       </fieldset>
     </form>
 
