--- a/templates/ensembl/gifts/submit.html
+++ b/templates/ensembl/gifts/submit.html
@@ -10,7 +10,13 @@
       {{ form.csrf }}
 
       <fieldset class="border rounded p-2 border-green">
-        <div class="row justify-content-center">
+        {% if status %}
+          <div class="row offset-1">
+            <h3 class="text-danger">Submission aborted: {{ status }}</h3>
+          </div>
+        {% endif %}
+
+        <div class="row">
           <div class="col-sm-12">
 
             <div class="form-group row">
@@ -38,8 +44,8 @@
               <div class="col-sm-4">{{ form.auth_token( class='form-control' ) }}</div>
             </div>
 
-            <div class="form-group row justify-content-center">
-              <div class="col-sm-10">
+            <div class="form-group row">
+              <div class="col-sm-12 offset-1">
                 {{ form.update_ensembl( class='btn bg-green' ) }}
                 {{ form.process_mapping( class='btn bg-green' ) }}
                 {{ form.publish_mapping( class='btn bg-green' ) }}
