--- a/templates/ensembl/gifts/submit.html
+++ b/templates/ensembl/gifts/submit.html
@@ -45,10 +45,10 @@
             </div>
 
             <div class="form-group row">
-              <div class="col-sm-12 offset-1">
+              <div class="col-sm-12 offset-3">
                 {{ form.update_ensembl( class='btn bg-green' ) }}
                 {{ form.process_mapping( class='btn bg-green' ) }}
-                {{ form.publish_mapping( class='btn bg-green' ) }}
+                <!-- {{ form.publish_mapping( class='btn bg-green' ) }} -->
               </div>
             </div>
 
