--- a/templates/ensembl/datacheck/submit.html
+++ b/templates/ensembl/datacheck/submit.html
@@ -1,6 +1,7 @@
 
 {% extends "ensembl/submit.html" %}
 
+{% set icon_image = 'img/production.png' %}
 {% set title = 'Datacheck Submission' %}
 
 {% block submit -%}
@@ -12,24 +13,22 @@
       <legend class="w-auto fg-purple">&nbsp;{{ form.server.description }}&nbsp;</legend>
 
       <div class="form-group row">
-        {{ form.server.server_url.label( class='col-sm-2 col-form-label' ) }}
-        <div class="col-sm-9">{{ form.server.server_url( class='form-control' ) }}</div>
+        {{ form.server.server_name.label( class='col-sm-2 col-form-label' ) }}
+        <div class="col-sm-4">{{ form.server.server_name( class='form-control' ) }}</div>
       </div>
 
       <div class="form-group row">
         <div class="col-sm-2">{{ form.server.source( class='form-control select-align-right', onchange='selectServerSource()' ) }}</div>
-        <div class="col-sm-9">
-          {{ form.server.database( class='form-control' ) }}
+        <div class="col-sm-4">
+          {{ form.server.dbname( class='form-control' ) }}
           {{ form.server.species( class='form-control', style='display: none' ) }}
-          {{ form.server.division( class='form-control', onchange='selectDivision()', style='display: none' ) }}
+          {{ form.server.division( class='form-control', style='display: none' ) }}
         </div>
       </div>
 
       <div class="form-group row">
-        {{ form.server.database_type.label( class='col-sm-2 col-form-label', id='server-database_type-label', style='display: none' ) }}
-        <div class="col-sm-2">{{ form.server.database_type( class='form-control', style='display: none' ) }}</div>
-        {{ form.server.release.label( class='col-sm-1 col-form-label', id='server-release-label', style='display: none' ) }}
-        <div class="col-sm-2">{{ form.server.release( class='form-control', style='display: none' ) }}</div>
+        {{ form.server.db_type.label( class='col-sm-2 col-form-label', id='server-db_type-label', style='display: none' ) }}
+        <div class="col-sm-2">{{ form.server.db_type( class='form-control', style='display: none' ) }}</div>
       </div>
 
     </fieldset>
@@ -55,21 +54,16 @@
     </fieldset>
 
     <fieldset class="border rounded p-2">
-      <legend class="w-auto">&nbsp;{{ form.configuration.description }}&nbsp;</legend>
+      <legend class="w-auto">&nbsp;{{ form.submitter.description }}&nbsp;</legend>
 
       <div class="form-group row">
-        {{ form.configuration.config_profile.label( class='col-sm-2 col-form-label' ) }}
-        <div class="col-sm-3">{{ form.configuration.config_profile( class='form-control' ) }}</div>
+        {{ form.submitter.email.label( class='col-sm-2 col-form-label' ) }}
+        <div class="col-sm-5">{{ form.submitter.email( class='form-control' ) }}</div>
       </div>
 
       <div class="form-group row">
-        {{ form.configuration.email.label( class='col-sm-2 col-form-label' ) }}
-        <div class="col-sm-5">{{ form.configuration.email( class='form-control' ) }}</div>
-      </div>
-
-      <div class="form-group row">
-        {{ form.configuration.tag.label( class='col-sm-2 col-form-label' ) }}
-        <div class="col-sm-5">{{ form.configuration.tag( class='form-control' ) }}</div>
+        {{ form.submitter.tag.label( class='col-sm-2 col-form-label' ) }}
+        <div class="col-sm-5">{{ form.submitter.tag( class='form-control' ) }}</div>
       </div>
 
     </fieldset>
