Revert "Feature/datacheck ui"

--- a/templates/ensembl/datacheck/list.html
+++ b/templates/ensembl/datacheck/list.html
@@ -1,55 +1,4 @@
-{% extends 'ensembl/datacheck/base.html' %}
 
-{% block head %}
-{{ super() }}
-<link type="text/css"  rel="stylesheet" href="{{ url_for('static', filename='datachecks/css/bootstrap-table.min.css') }}"/>
-{% endblock %}
-{% block content %}
+{% extends 'ensembl/list.html' %}
 
-<div class="container" >
-<div class="row table-responsive">
-<div class="col-12">
-<table id="table"
-  class="table table-striped thead-dark table-bordered "
-  id="table"
-  data-toggle="table"
-  data-row-style="rowStyle"
-  data-search="true"
-  data-show-refresh="true"
-  data-show-toggle="true"
-  data-show-columns="true"
-  data-sortable="true"
-  data-sort-class="table-active"
-  data-pagination="true"
-  data-show-button-text="true"
-  data-page-size="25"
-  data-detail-view="true"
-  data-detail-view-by-click="false"
-  data-detail-view-icon="true"
-  data-detail-formatter="detailFormatter"
-  data-url="/datacheck/jobs?format=json"
-  data-show-columns="true">
-  <thead>
-   <!-- data-url="http://ensprod-dev-01.ebi.ac.uk/api/production/dc/jobs" -->
-    <tr style="cursor: pointer">
-      <!--<th data-formatter="expandIcon"></th>-->
-      <th data-field="id" data-sortable="true" data-formatter="detailPage">ID</th>
-      <th data-field="input.db_type" data-sortable="true">DB Type</th>
-      <th data-field="status" data-sortable="true" data-formatter="statusFormat">Status</th>
-      <th data-field="input.tag" data-sortable="true" >Tag</th>
-      <th data-field="input.timestamp" data-sortable="true" >Start Time</th>
-      <th data-field="when_completed" data-sortable="true" >End Time</th>
-    </tr>
-  </thead>
-</table>
-</div>
-</div>
-</div>
-{% endblock content %}
-
-{% block scripts %}
-  {{ super() }}
-  <script src="{{ url_for('static', filename='datachecks/js/bootstrap-table.min.js') }}"></script>
- <script src="{{ url_for('static', filename='datachecks/js/datacheck_jobs.js') }}"></script>
-{% endblock scripts %}
-
+{% set title = 'Datacheck Job List' %}
