--- a/templates/ensembl/datacheck/detail_list.html
+++ b/templates/ensembl/datacheck/detail_list.html
@@ -6,8 +6,9 @@
 {% endblock %}
 {% block content %}
 
-<!-- <div class="container" > -->
 <div class="m-4" >
+  <div class="row" style="padding-top:20px">
+  </div>
 <div class="row table-responsive">
 <div class="col-12">
 <table id="table"
@@ -27,21 +28,21 @@
   data-detail-view-by-click="false"
   data-detail-view-icon="true"
   data-detail-formatter="detailFormatter"
+  data-buttons-toolbar=""
   data-buttons-class="btn bg-purple"
-  data-url="/datacheck/jobs?format=json"
+  data-url="/datacheck/jobs/{{job_id}}?format=json"
   data-show-columns="true">
   <thead>
     <tr style="cursor: pointer">
       <!--<th data-formatter="expandIcon"></th>-->
-      <th data-field="id" data-sortable="true" data-formatter="detailPage">ID</th>
-      <!--<th data-field="input.db_type" data-sortable="true">DB Type</th>-->
+      <th data-field="id" data-sortable="true" data-formatter="downloadFormat">ID</th>
+      <th data-field="status" data-sortable="true" data-formatter="statusFormat">Status</th>
       <th data-field="input.dbname" data-sortable="true" data-formatter="FormatArrayName"  >DB Name</th>
       <th data-field="input.datacheck_types" data-sortable="true" data-formatter="FormatArrayName"  >Datacheck types</th>
       <th data-field="input.datacheck_groups" data-sortable="true" data-formatter="FormatArrayName"  >Datacheck groups</th>
-      <th data-field="status" data-sortable="true" data-formatter="statusFormat">Status</th>
       <th data-field="input.tag" data-sortable="true" >Tag</th>
       <th data-field="input.timestamp" data-sortable="true" >Start Time</th>
-      <th data-field="output" data-sortable="true" data-formatter="FormatTimestamp">End Time</th>
+      <th data-field="output" data-sortable="true"  data-formatter="FormatTimestamp" >End Time</th>
     </tr>
   </thead>
 </table>
