--- a/src/ensembl/production/datacheck/static/css/ensembl.css
+++ b/src/ensembl/production/datacheck/static/css/ensembl.css
@@ -145,3 +145,71 @@ select.select-align-right > option {
   border: 1px solid rgba(128, 0, 102, 1);
   font-size: 90%;
 }
+
+/* dropdown css */
+
+.ui-autocomplete { 
+  position: absolute; 
+  cursor: pointer;
+  max-height: 400px;
+  overflow-y: auto;   /* prevent horizontal scrollbar */
+  overflow-x: auto; /* add padding to account for vertical scrollbar */
+  z-index:1000 !important;
+} 
+* html .ui-autocomplete { width:5px; } 
+
+.ui-menu .ui-menu {
+margin-top: -3px;
+}
+
+.ui-menu .ui-menu-item {
+margin:0;
+padding: 0; 
+float: left;
+clear: left;
+width: 100%;
+}
+
+.ui-menu .ui-menu-item a {
+text-decoration:none;
+display:block;
+padding:.2em .4em;
+line-height:1.5; 
+}
+
+.ui-menu .ui-menu-item a.ui-state-hover,
+  
+
+.ui-menu .ui-menu-item a.ui-state-active {
+font-weight: normal;
+margin: -1px;
+};
+
+.ui-helper-hidden-accessible { 
+  display: none;
+  color: white;
+}
+.ui-helper-hidden-accessible { position: absolute; left: -9999px; }
+
+/*Submit css for dropdown color*/
+.ui-menu {
+  list-style: aria;
+  padding: 2px;
+  width: 5px;
+  margin: 0;
+  background: rgba(128, 0, 102, 1)  ;
+  color: #f5f5ef;
+  display:block;
+  border:  2px solid rgba(128, 0, 102, 1)!important ;
+  float: auto;   
+}
+.ui-menu .ui-menu-item-wrapper:hover {
+ color: #303030;
+ background-color: rgb(216, 209, 214)!important;
+ border: rgb(2, 46, 9) 1px solid;
+}
+
+.input-group .bootstrap-select.form-control {
+  z-index: -9999999;
+}
+
