--- a/src/ensembl/production/datacheck/templates/submit.html
+++ b/src/ensembl/production/datacheck/templates/submit.html
@@ -10,6 +10,19 @@ set title = 'Datacheck Submission' -->
 {{ super() }}
 <div class="container">
   <div class="row">
+    <div class="col-10">
+      {% with messages = get_flashed_messages() %}
+        {% if messages %}
+          {% for message in messages %}
+          <div class="alert alert-danger m-2" role="alert">
+            <p>{{ message }}</p>
+          </div>
+          {% endfor %}
+        {% endif %}
+      {% endwith %}
+    </div>
+  </div>
+  <div class="row">
     <div class="col-sm-10">
           {% if error %}
             <div class="alert alert-danger m-2" role="alert">
@@ -21,8 +34,8 @@ set title = 'Datacheck Submission' -->
   <fieldset class="border rounded p-2 border-purple" >
     <legend class="w-auto bg-purple" >&nbsp;Datacheck Submission&nbsp;</legend>
   <form action="" method="post" enctype="multipart/form-data" autocomplete="off" class="m-4">
-    {{ form.csrf }}
-
+    {{ form.csrf_token }}
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
     <fieldset class="border rounded p-2 ">
       <legend class="w-auto fg-purple">&nbsp;{{ form.server.description }}&nbsp;</legend>
 
@@ -42,6 +55,7 @@ set title = 'Datacheck Submission' -->
             {% for error in form.server.dbname.errors %}
               {{ error }}
             {% endfor %}
+            
           </div>
         {% endif %} 
         </div>
