changed backgorund color similar to handover

--- a/src/ensembl/production/datacheck/static/css/ensembl.css
+++ b/src/ensembl/production/datacheck/static/css/ensembl.css
@@ -42,7 +42,8 @@ select.select-align-right > option {
 }
 
 .nav-link.active {
-  background-color: rgba(128, 0, 102, 0.2);
+  background-color: #17a2b8 !important; /* rgba(128, 0, 102, 0.2);*/
+  color: white !important;
 }
 
 .table td, .table th {
@@ -141,8 +142,8 @@ select.select-align-right > option {
 }
 
 .bootstrap-tagsinput .badge {
-  background-color: rgba(128, 0, 102, 1);
-  border: 1px solid rgba(128, 0, 102, 1);
+  background-color: #17a2b8;
+  border: 1px solid #17a2b8;
   font-size: 90%;
 }
 
@@ -197,10 +198,10 @@ margin: -1px;
   padding: 2px;
   width: 5px;
   margin: 0;
-  background: rgba(128, 0, 102, 1)  ;
+  background:#17a2b8  ;
   color: #f5f5ef;
   display:block;
-  border:  2px solid rgba(128, 0, 102, 1)!important ;
+  border:  2px solid #17a2b8!important ;
   float: auto;   
 }
 .ui-menu .ui-menu-item-wrapper:hover {
@@ -211,5 +212,14 @@ margin: -1px;
 
 .input-group .bootstrap-select.form-control {
   z-index: -9999999;
+}
+
+/*set button colors*/
+.h-buttons{
+  background-color: #17a2b8;
+  color: white;
+}
+.h-border{
+  border-color:#17a2b8!important;
 }
 
