--- a/src/ensembl/production/datacheck/templates/list.html
+++ b/src/ensembl/production/datacheck/templates/list.html
@@ -27,7 +27,7 @@
   data-detail-view-by-click="false"
   data-detail-view-icon="true"
   data-detail-formatter="detailFormatter"
-  data-buttons-class="btn bg-purple"
+  data-buttons-class="btn h-buttons"
   data-query-params="queryParams"
   data-show-columns="true">
   <thead>
