--- a/src/ensembl/production/datacheck/templates/types.html
+++ b/src/ensembl/production/datacheck/templates/types.html
@@ -3,12 +3,12 @@
 {% block datacheck_table %}
 
   <table class="table table-bordered table-striped">
-    <thead>
+    <thead class="h-buttons">
       <tr>
-        <th class="bg-purple">Name</th>
-        <th class="bg-purple">Description</th>
-        <th class="bg-purple">Type</th>
-        <th class="bg-purple">Groups</th>
+        <th >Name</th>
+        <th >Description</th>
+        <th >Type</th>
+        <th >Groups</th>
       </tr>
     </thead>
     <tbody>
