Ahcnged display for supervisor controllers outputs

--- a/src/ensembl/production/datacheck/templates/base.html
+++ b/src/ensembl/production/datacheck/templates/base.html
@@ -33,7 +33,7 @@
       {% elif config['DATACHECK_TYPE'] == 'rapid' %}
           <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/rapid.css') }}">                                     
       {% else %}
-          <link rel="stylesheet" href="{{ url_for('static', filename='css/vertebrates.css') }}">>
+          <link rel="stylesheet" href="{{ url_for('static', filename='css/vertebrates.css') }}">
       {% endif %}
 
 
